# rv_simulator

./: CMakeLists.txt  README.md  build.sh  debug_build.sh  launch_docker.sh  main.cpp  release_build.sh  run.sh
examples/: a  fact.c  fact.elf  final_state  hello.elf  initial_state  scan.elf  scan.s  snippy_rv32_plugin.yaml  snippy_rv32_plugin.yaml.elf  snippy_rv32_plugin.yaml.ld  sum.elf  sum.s
examples/snippy/: initial_registers_state.yml
inc/: RV32I.hpp  cpu.hpp  decoder.hpp  instruction.hpp  instruction_impl.hpp  memory.hpp  parser.hpp  simulator.hpp  utility.hpp
snippy-plugin/: CMakeLists.txt  RVM.hpp  VTable.cpp  VTable.hpp  main.cpp
src/: instruction_imp.cpp  instruction_impl.cpp
tests/: CMakeLists.txt  Test.cpp  e2e_tester.py  test.cpp
tests/e2e/1/: 1.in  1.s
tests/e2e/10/: 10.in  10.s
tests/e2e/2/: 2.in  2.out
tests/e2e/3/: 3.in  3.s
tests/e2e/4/: 4.in  4.s
tests/e2e/5/: 5.in  5.s
tests/e2e/6/: 6.in  6.s
tests/e2e/7/: 7.in  7.s
tests/e2e/8/: 8.in  8.s
tests/e2e/9/: 9.in  9.s
